<resources>
    <string name="app_name">MovieDB</string>
    <string name="action_settings">Settings</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="hint_title_required">Title (Required)</string>
    <string name="hint_year">Year</string>
    <string name="hint_actors">Actors</string>
    <string name="hint_actresses">Leading Ladies</string>
    <string name="hint_summary">Summary</string>
    <string name="hint_director">Director</string>
    <string name="hint_awards">Awards</string>
    <string name="hint_songs">Songs</string>
    <string name="label_title">Title:</string>
    <string name="label_year">Year:</string>
    <string name="label_actors">Actors:</string>
    <string name="label_actresses">Leading Ladies:</string>
    <string name="label_summary">Summary:</string>
    <string name="label_director">Director:</string>
    <string name="label_awards">Awards:</string>
    <string name="label_songs">Songs:</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanenty delete the movie</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="movie_added">Movie added successfully</string>
    <string name="movie_not_added">Movie added successfully</string>
    <string name="movie_updated">Movie updated</string>
    <string name="movie_not_updated">Movie was not updated due to an error</string>
    <string name="invalid_query_uri">Invalid query Uri:</string>
    <string name="invalid_insert_uri">Invalid insert Uri:</string>
    <string name="invalid_update_uri">Invalid update Uri:</string>
    <string name="invalid_delete_uri">Invalid delete Uri:</string>
    <string name="insert_failed">Insert failed:</string>
</resources>
