<ScrollView
    android:id="@+id/detailsScrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/titleLabelTextView"
            style="@style/MovieLabelTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/label_title"/>

        <TextView
            android:id="@+id/titleTextView"
            style="@style/MovieTextView"
            android:maxWidth="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:id="@+id/yearLabelTextView"
            style="@style/MovieLabelTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/label_year"/>

        <TextView
            android:id="@+id/yearTextView"
            style="@style/MovieTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:id="@+id/actorsLabelTextView"
            style="@style/MovieLabelTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/label_actors"/>

        <TextView
            android:id="@+id/actorsTextView"
            style="@style/MovieTextView"
            android:maxWidth="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1" />

        <TextView
            android:id="@+id/actressesLabelTextView"
            style="@style/MovieLabelTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/label_actresses"/>

        <TextView
            android:id="@+id/actressesTextView"
            style="@style/MovieTextView"
            android:maxWidth="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1" />

        <TextView
            android:id="@+id/summaryLabelTextView"
            style="@style/MovieLabelTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/label_summary"/>

        <TextView
            android:id="@+id/summaryTextView"
            style="@style/MovieTextView"
            android:maxWidth="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1" />

        <TextView
            android:id="@+id/directorLabelTextView"
            style="@style/MovieLabelTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/label_director"/>

        <TextView
            android:id="@+id/directorTextView"
            style="@style/MovieTextView"
            android:maxWidth="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1" />

        <TextView
        android:id="@+id/awardsLabelTextView"
        style="@style/MovieLabelTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:text="@string/label_awards"/>

        <TextView
            android:id="@+id/awardsTextView"
            style="@style/MovieTextView"
            android:maxWidth="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="1" />

        <TextView
            android:id="@+id/songsLabelTextView"
            style="@style/MovieLabelTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="0"
            android:text="@string/label_songs"/>

        <TextView
            android:id="@+id/songsTextView"
            style="@style/MovieTextView"
            android:maxWidth="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="1" />
    </GridLayout>
</ScrollView>